# rsi-econ

./: .env.example  .env.provider.local.example  .gitignore  README.md  docker-compose.yml  finish  pyproject.toml
.claude/skills/: git-clean.md
cli/: discord_bot.py  inject.py  providers.py  session.py  start.py  stop.py  watch.py
operator_console/: app.py  bridge_api.py  config.py  data.py  launches.py  live_state.py  plan_catalog.py  session_live_state.py  sessions.py
operator_console/templates/: base.html  home.html  launch_detail.html  launches.html  proposal_detail.html  session_detail.html  session_new.html  sessions.html
sandbox/: Dockerfile  entrypoint.sh  supervisor.py
sandbox/baseline/: browser_tool.py
sandbox/seed/: .gitignore  CHANGELOG.md  SYSTEM.md  browser_tool.py  main.py
scripts/: approve.sh  down.sh  finish_task.py  post_task_update.py  preflight.sh  provider.sh  reset_state.sh  smoke.py  staleness.sh  status.sh  test.sh  up.sh
shared/: config.py  mock_llm.py  schemas.py
state/: discord_state.json  notification_config.json
tests/integration/: test_action_compose.py  test_approval_compose.py  test_boundary_compose.py  test_browser_compose.py  test_h2_mediation_compose.py  test_h3_preconnect_compose.py  test_provider_passthrough_compose.py  test_recovery_compose.py  test_seed_runner_compose.py  test_web_fetch_compose.py
tests/unit/: test_agent_search_fallback.py  test_approval_routes.py  test_auth.py  test_bridge_contract.py  test_bridge_git_api.py  test_bridge_search.py  test_bridge_summarize.py  test_browser_policy.py  test_compaction.py  test_conversation_persistence.py  test_discord_bot.py  test_egress_post.py  test_executor.py  (+38 more)
(+51 files in other folders)
